[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Player.gd" type="Script" id=1]
[ext_resource path="res://src/states/MoveState.gd" type="Script" id=2]
[ext_resource path="res://src/states/IdleState.gd" type="Script" id=3]
[ext_resource path="res://src/states/GravityState.gd" type="Script" id=4]
[ext_resource path="res://src/states/JumpState.gd" type="Script" id=5]
[ext_resource path="res://src/states/FallState.gd" type="Script" id=6]
[ext_resource path="res://src/states/DashState.gd" type="Script" id=7]
[ext_resource path="res://assets/glowing_circle.png" type="Texture" id=8]
[ext_resource path="res://src/Camera2D.gd" type="Script" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.840173, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 125.52
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 0.83
scale = 0.2
scale_curve = SubResource( 6 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.25, 1.25 )
smoothing_enabled = true
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="States" type="Node" parent="."]

[node name="IdleState" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="MoveState" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="GravityState" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="JumpState" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="FallState" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="DashState" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="AimPivot" type="Node2D" parent="."]
visible = false

[node name="Aim" type="Line2D" parent="AimPivot"]
points = PoolVector2Array( 24, 0, 48, 0 )
width = 4.0

[node name="DashParticles" type="Particles2D" parent="."]
emitting = false
amount = 64
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 8 )
